--- a/1.0-Observability_Bad_SSL/j2/https.j2
+++ b/1.0-Observability_Bad_SSL/j2/https.j2
@@ -38,7 +38,7 @@
             "serverAddresses": [
                     {% set comma = joiner(",") %}
                     {% for mem in pool_members %}
-                        {{comma()}} "{{  hostvars[mem]['private_ip']  }}"
+                        {{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
                     {% endfor %}
             ]
           }]
