--- a/1.0-Observability_Bad_SSL/j2/https.j2
+++ b/1.0-Observability_Bad_SSL/j2/https.j2
@@ -5,6 +5,10 @@
   "declaration": {
     "class": "ADC",
     "schemaVersion": "3.0.0",
+    "controls": {
+      "class": "Controls",
+      "dryRun": false
+    },
     "id": "usecase1",
     "label": "Ansible Workshops",
     "remark": "HTTPS with pool",
