--- a/1.1-AS3_SSL_App/j2/as3_template.j2
+++ b/1.1-AS3_SSL_App/j2/as3_template.j2
@@ -1,54 +1,55 @@
-"AS3-UseCase-1": {
-  "class": "Application",
-  "{{F5_VIP_Name_UC1}}": {
-    "class": "Service_HTTPS",
-    "virtualAddresses": [
-      "{{ private_ip }}"
-    ],
-    "profileMultiplex": {
-        "bigip": "/Common/oneconnect"
-    },
-    "pool": "{{ F5_VIP_Name_UC1 }}_pool",
-    "serverTLS": {
-        "bigip": "/Common/clientssl"
-    },
-    "persistenceMethods": []
-  },
-  "{{ F5_VIP_Name_UC1 }}_pool": {
-    "class": "Pool",
-    "minimumMembersActive": 0,
-    "minimumMonitors": "all",
-    "monitors": [
-      "http"
-    ],
-    "members": [{
-      "servicePort": 80,
-      "serverAddresses": [
-              {% set comma = joiner(",") %}
-              {% for mem in pool_members %}
-                  {{comma()}} "{{  hostvars[mem]['private_ip']  }}"
-              {% endfor %}
-      ]
-    }]
-  }
+"{{ as3_tenant_name }}": {
+	"class": "Tenant",
+	"{{ F5_VIP_Name }}": {
+	"class": "Application",
+	"{{ F5_VIP_Name }}": {
+		"class": "Service_HTTPS",
+		"virtualAddresses": [
+		"{{ F5_VIP_IP }}"
+		],
+		"profileMultiplex": {
+			"bigip": "/Common/oneconnect"
+		},
+		"pool": "{{ F5_VIP_Name }}_pool",
+		"serverTLS": {
+					"bigip": "/Common/clientssl"
+				},
+		"persistenceMethods": []
+	},
+	"{{ F5_VIP_Name }}_pool": {
+		"class": "Pool",
+				"minimumMembersActive": 0,
+				"minimumMonitors": "all",
+		"monitors": [
+		"http"
+		],
+		"members": [{
+		"servicePort": 80,
+		"serverAddresses": [
+				{% set comma = joiner(",") %}
+				{% for mem in pool_members %}
+					{{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
+				{% endfor %}
+		]
+		}]
+	}
 },
 "AS3-UseCase-2": {
 	"class": "Application",
-	"{{F5_VIP_Name}}": {
+	"{{ F5_VIP_Name_2 }}": {
 		"class": "Service_HTTPS",
-		"virtualPort": 8081,
 		"virtualAddresses": [
-			"{{ private_ip }}"
+			"{{ F5_VIP_IP_2 }}"
 		],
-		"pool": "{{ F5_VIP_Name }}_pool",
+		"pool": "{{ F5_VIP_Name_2 }}_pool",
 		"redirect80": false,
 		"profileMultiplex": {
 			"bigip": "/Common/oneconnect"
 		},
-		"serverTLS": "{{ F5_VIP_Name }}_cert",
+		"serverTLS": "{{ F5_VIP_Name_2 }}_cert",
 		"persistenceMethods": []
 	},
-	"{{ F5_VIP_Name }}_pool": {
+	"{{ F5_VIP_Name_2 }}_pool": {
 		"class": "Pool",
 		"minimumMembersActive": 0,
 		"minimumMonitors": "all",
@@ -60,18 +61,18 @@
 			"serverAddresses": [
 		{% set comma = joiner(",") %}
 		{% for mem in pool_members %}
-			{{comma()}} "{{  hostvars[mem]['private_ip']  }}"
+			{{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
 		{% endfor %}
 ]
 		}]
 	},
-	"{{ F5_VIP_Name }}_cert": {
+	"{{ F5_VIP_Name_2 }}_cert": {
 		"class": "TLS_Server",
 		"certificates": [{
-			"certificate": "{{ F5_VIP_Name }}_crt"
+			"certificate": "{{ F5_VIP_Name_2 }}_crt"
 		}]
 	},
-	"{{ F5_VIP_Name }}_crt": {
+	"{{ F5_VIP_Name_2 }}_crt": {
 		"class": "Certificate",
 		"remark": "in practice we recommend using a passphrase",
 		"certificate": "{{ lookup('file', '{{playbook_dir}}/app-demo.crt') | replace('\n', '\\n') }}",
