--- a/1.1-AS3_SSL_App/j2/as3_template.j2
+++ b/1.1-AS3_SSL_App/j2/as3_template.j2
@@ -1,6 +1,4 @@
-"{{ as3_tenant_name }}": {
-	"class": "Tenant",
-	"{{ F5_VIP_Name }}": {
+"{{ F5_VIP_Name }}": {
 	"class": "Application",
 	"{{ F5_VIP_Name }}": {
 		"class": "Service_HTTPS",
@@ -18,23 +16,23 @@
 	},
 	"{{ F5_VIP_Name }}_pool": {
 		"class": "Pool",
-				"minimumMembersActive": 0,
-				"minimumMonitors": "all",
+		"minimumMembersActive": 0,
+		"minimumMonitors": "all",
 		"monitors": [
-		"http"
+			"http"
 		],
 		"members": [{
-		"servicePort": 80,
-		"serverAddresses": [
+			"servicePort": 80,
+			"serverAddresses": [
 				{% set comma = joiner(",") %}
 				{% for mem in pool_members %}
 					{{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
 				{% endfor %}
-		]
+			]
 		}]
 	}
 },
-"AS3-UseCase-2": {
+"{{ F5_VIP_Name_2 }}": {
 	"class": "Application",
 	"{{ F5_VIP_Name_2 }}": {
 		"class": "Service_HTTPS",
@@ -59,11 +57,11 @@
 		"members": [{
 			"servicePort": 80,
 			"serverAddresses": [
-		{% set comma = joiner(",") %}
-		{% for mem in pool_members %}
-			{{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
-		{% endfor %}
-]
+				{% set comma = joiner(",") %}
+				{% for mem in pool_members %}
+				{{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
+				{% endfor %}
+			]
 		}]
 	},
 	"{{ F5_VIP_Name_2 }}_cert": {
