--- a/1.1-AS3_SSL_App/j2/as3_template.j2
+++ b/1.1-AS3_SSL_App/j2/as3_template.j2
@@ -3,15 +3,14 @@
 	"{{ F5_VIP_Name }}": {
 		"class": "Service_HTTPS",
 		"virtualAddresses": [
-		"{{ F5_VIP_IP }}"
+			"{{ F5_VIP_IP_2 }}"
 		],
+		"pool": "{{ F5_VIP_Name }}_pool",
+		"redirect80": false,
 		"profileMultiplex": {
 			"bigip": "/Common/oneconnect"
 		},
-		"pool": "{{ F5_VIP_Name }}_pool",
-		"serverTLS": {
-					"bigip": "/Common/clientssl"
-				},
+		"serverTLS": "{{ F5_VIP_Name }}_cert",
 		"persistenceMethods": []
 	},
 	"{{ F5_VIP_Name }}_pool": {
@@ -22,14 +21,26 @@
 			"http"
 		],
 		"members": [{
-			"servicePort": 80,
-			"serverAddresses": [
-				{% set comma = joiner(",") %}
-				{% for mem in pool_members %}
-					{{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
-				{% endfor %}
-			]
+		"servicePort": 80,
+		"serverAddresses": [
+			{% set comma = joiner(",") %}
+			{% for mem in pool_members %}
+			{{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
+			{% endfor %}
+		]
 		}]
+	},
+	"{{ F5_VIP_Name }}_cert": {
+		"class": "TLS_Server",
+		"certificates": [{
+		"certificate": "{{ F5_VIP_Name_2 }}_crt"
+		}]
+	},
+	"{{ F5_VIP_Name }}_crt": {
+		"class": "Certificate",
+		"remark": "in practice we recommend using a passphrase",
+		"certificate": "{{ lookup('file', '{{playbook_dir}}/app-demo.crt') | replace('\n', '\\n') }}",
+		"privateKey": "{{ lookup('file', '{{playbook_dir}}/app-demo.key') | replace('\n', '\\n') }}"
 	}
 },
 "{{ F5_VIP_Name_2 }}": {
