--- a/1.0-Observability_Bad_SSL/j2/https.j2
+++ b/1.0-Observability_Bad_SSL/j2/https.j2
@@ -19,33 +19,44 @@
         "{{ F5_VIP_Name }}": {
           "class": "Service_HTTPS",
           "virtualAddresses": [
-            "{{ F5_VIP_IP }}"
+            "{{ F5_VIP_IP_2 }}"
           ],
-          "profileMultiplex": {
-              "bigip": "/Common/oneconnect"
-          },
           "pool": "{{ F5_VIP_Name }}_pool",
-          "serverTLS": {
-					    "bigip": "/Common/clientssl"
-					},
+          "redirect80": false,
+          "profileMultiplex": {
+            "bigip": "/Common/oneconnect"
+          },
+          "serverTLS": "{{ F5_VIP_Name }}_cert",
           "persistenceMethods": []
         },
         "{{ F5_VIP_Name }}_pool": {
           "class": "Pool",
-					"minimumMembersActive": 0,
-					"minimumMonitors": "all",
+          "minimumMembersActive": 0,
+          "minimumMonitors": "all",
           "monitors": [
             "http"
           ],
           "members": [{
             "servicePort": 80,
             "serverAddresses": [
-                    {% set comma = joiner(",") %}
-                    {% for mem in pool_members %}
-                        {{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
-                    {% endfor %}
+              {% set comma = joiner(",") %}
+              {% for mem in pool_members %}
+              {{comma()}} "{{  hostvars[mem]['ansible_host']  }}"
+              {% endfor %}
             ]
           }]
+        },
+        "{{ F5_VIP_Name }}_cert": {
+          "class": "TLS_Server",
+          "certificates": [{
+            "certificate": "{{ F5_VIP_Name_2 }}_crt"
+          }]
+        },
+        "{{ F5_VIP_Name }}_crt": {
+          "class": "Certificate",
+          "remark": "in practice we recommend using a passphrase",
+          "certificate": "{{ lookup('file', '{{playbook_dir}}/app-demo.crt') | replace('\n', '\\n') }}",
+          "privateKey": "{{ lookup('file', '{{playbook_dir}}/app-demo.key') | replace('\n', '\\n') }}"
         }
       }
     }
