--- a/1.0-Observability_Bad_SSL/j2/https.j2
+++ b/1.0-Observability_Bad_SSL/j2/https.j2
@@ -19,7 +19,7 @@
         "{{ F5_VIP_Name }}": {
           "class": "Service_HTTPS",
           "virtualAddresses": [
-            "{{ F5_VIP_IP_2 }}"
+            "{{ F5_VIP_IP }}"
           ],
           "pool": "{{ F5_VIP_Name }}_pool",
           "redirect80": false,
@@ -49,7 +49,7 @@
         "{{ F5_VIP_Name }}_cert": {
           "class": "TLS_Server",
           "certificates": [{
-            "certificate": "{{ F5_VIP_Name_2 }}_crt"
+            "certificate": "{{ F5_VIP_Name }}_crt"
           }]
         },
         "{{ F5_VIP_Name }}_crt": {
