--- a/2.1-Add_WAF_Policy/j2/provision.j2
+++ b/2.1-Add_WAF_Policy/j2/provision.j2
@@ -7,7 +7,7 @@
         "myProvisioning": {
             "asm": "nominal",
             "apm": "nominal",
-            "dns": "nominal",
+            "gtm": "nominal",
             "ltm": "nominal",
             "class": "Provision"
         }
