--- a/3.1-Fix-Missing_DO/templates/do_configure_deviceCert.j2
+++ b/3.1-Fix-Missing_DO/templates/do_configure_deviceCert.j2
@@ -64,12 +64,12 @@
         },
         "internal": {
             "class": "VLAN",
-            "tag": 4094,
+            "tag": "{{ Internal_VLAN }}",
             "mtu": 1500,
             "interfaces": [
                 {
                     "name": "1.1",
-                    "tagged": false
+                    "tagged": true
                 }
             ]
         },
@@ -89,12 +89,12 @@
         },
         "external": {
             "class": "VLAN",
-            "tag": 4093,
+            "tag": "{{ External_VLAN }}",
             "mtu": 1500,
             "interfaces": [
                 {
                     "name": "1.2",
-                    "tagged": false
+                    "tagged": true
                 }
             ]
         },
@@ -114,12 +114,12 @@
         },
         "ha": {
             "class": "VLAN",
-            "tag": 4092,
+            "tag": "{{ HA_VLAN }}",
             "mtu": 1500,
             "interfaces": [
                 {
                     "name": "1.3",
-                    "tagged": false
+                    "tagged": true
                 }
             ]
         },
