--- a/3.1-Fix-Missing_DO/roles/F5-Roles/BIG_IP/do_configure/templates/do_configure_deviceCert.j2
+++ b/3.1-Fix-Missing_DO/roles/F5-Roles/BIG_IP/do_configure/templates/do_configure_deviceCert.j2
@@ -6,7 +6,7 @@
     "label": "Onboard BIG-IP into an HA Pair",
     "Common": {
         "class": "Tenant",
-        "hostname": "{{ inventory_hostname }}.{{ domain_fqdn }}",
+        "hostname": "{{ inventory_hostname }}.{{domain_fqdn}}",
         "myLicense": {
             "class": "License",
             "licenseType": "licensePool",
@@ -64,12 +64,12 @@
         },
         "internal": {
             "class": "VLAN",
-            "tag": "{{ Internal_VLAN }}",
+            "tag": 4094,
             "mtu": 1500,
             "interfaces": [
                 {
                     "name": "1.1",
-                    "tagged": true
+                    "tagged": false
                 }
             ]
         },
@@ -89,12 +89,12 @@
         },
         "external": {
             "class": "VLAN",
-            "tag": "{{ External_VLAN }}",
+            "tag": 4093,
             "mtu": 1500,
             "interfaces": [
                 {
                     "name": "1.2",
-                    "tagged": true
+                    "tagged": false
                 }
             ]
         },
@@ -114,12 +114,12 @@
         },
         "ha": {
             "class": "VLAN",
-            "tag": "{{ HA_VLAN }}",
+            "tag": 4092,
             "mtu": 1500,
             "interfaces": [
                 {
                     "name": "1.3",
-                    "tagged": true
+                    "tagged": false
                 }
             ]
         },
