--- a/2.1-Add_WAF_Policy/j2/as3_template.j2
+++ b/2.1-Add_WAF_Policy/j2/as3_template.j2
@@ -100,7 +100,7 @@
 	},
 	"{{ F5_VIP_Name_2 }}-Policy": {
       "class": "WAF_Policy",
-      "url": "{{ ASM_Policy_Website }}",
+      "url": "{{ ASM_Policy_Website_2 }}",
       "ignoreChanges": false
 	}
 }
